# Sensorium

./: .gitignore  CMakeLists.txt  ReadMe.MD  conanfile.py
src/: main.cpp
